Fix spacing on main page

--- a/_sass/index-page.scss
+++ b/_sass/index-page.scss
@@ -3,7 +3,7 @@
 
 .category {
     width: 90%;
-    max-width: 650px;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
     word-wrap: break-word;
